Add industry information for company

--- a/view/res_partner.xml
+++ b/view/res_partner.xml
@@ -8,7 +8,9 @@
             <field name="arch" type="xml">
 
                 <field name="email" position="after">
-                    <field name="business_industry" widget="selection" attrs="{'invisible':[('is_company','!=',True)]}"/>
+	                <field name="business_industry_class" required="1"/>
+	                <field name="business_industry_category" invisible="1" required="0" on_change="onchange_industry_category(business_industry_category, context)"/>
+	                <field name="business_industry_industry" required="0" on_change="onchange_industry_industry(business_industry_industry, context)"/>
                 </field>
 
             </field>
