--- a/view/res_partner.xml
+++ b/view/res_partner.xml
@@ -8,7 +8,7 @@
             <field name="arch" type="xml">
 
                 <field name="email" position="after">
-	                <field name="business_industry_class" required="1"/>
+	                <field name="business_industry_class"/>
 	                <field name="business_industry_category" invisible="1" required="0" on_change="onchange_industry_category(business_industry_category, context)"/>
 	                <field name="business_industry_industry" required="0" on_change="onchange_industry_industry(business_industry_industry, context)"/>
                 </field>
