Move a menuitem higher

--- a/l10n_fi_account_income_statement/views/account_financial_report_menu.xml
+++ b/l10n_fi_account_income_statement/views/account_financial_report_menu.xml
@@ -23,7 +23,7 @@
         </record>
         
         <menuitem name="Finnish Accounting Reports"
-            parent="account.menu_finance_legal_statement"
+            parent="account.menu_finance_reports"
             id="accounting_reports_finnish"
             groups="account.group_account_user,account.group_account_manager" />
         
