--- a/l10n_fi_account_ledger/views/account_move_line_menu_ledger.xml
+++ b/l10n_fi_account_ledger/views/account_move_line_menu_ledger.xml
@@ -21,15 +21,11 @@
             <field name="view_mode">tree,form</field>
             <field name="context">{"search_default_groupby_account": 1}</field>
         </record>
-         
-	 	<menuitem id="menu_accounting_reports" name="Accounting reports" parent="account.menu_finance" 
-	 		sequence="12" 
-	 		groups="account.group_account_user,account.group_account_manager"/>
 	    
        	<menuitem
             action="action_account_moves_all_ledger"
             id="menu_action_account_moves_all_ledger"
-            parent="menu_accounting_reports"
+            parent="l10n_fi_account_income_statement.accounting_reports_finnish"
             sequence="10"
             groups="account.group_account_user"
         />
@@ -37,7 +33,7 @@
        	<menuitem
             action="action_account_moves_all_journal"
             id="menu_action_account_moves_all_journal"
-            parent="menu_accounting_reports"
+            parent="l10n_fi_account_income_statement.accounting_reports_finnish"
             sequence="20"
             groups="account.group_account_user"
         />
