Add a temporary fix

--- a/l10n_fi_account_income_statement/views/account_financial_report_view.xml
+++ b/l10n_fi_account_income_statement/views/account_financial_report_view.xml
@@ -34,7 +34,7 @@
             <field name="inherit_id" ref="account.accounting_report_view"/>
             <field name="arch" type="xml">
                 <field name='account_report_id' position='attributes'> 
-                    <attribute name='domain'>[('code','=','STU')]</attribute>
+                    <attribute name='domain'>[('code','in',('STU','UTU'))]</attribute>
                 </field>
             </field>
         </record>
@@ -45,7 +45,7 @@
             <field name="inherit_id" ref="account.accounting_report_view"/>
             <field name="arch" type="xml">
                 <field name='account_report_id' position='attributes'> 
-                    <attribute name='domain'>[('code','=','UTU')]</attribute>
+                    <attribute name='domain'>[('code','in',('STU','UTU'))]</attribute>
                 </field>
             </field>
         </record>
