--- a/l10n_fi_account_ledger/views/account_move_line_menu_ledger.xml
+++ b/l10n_fi_account_ledger/views/account_move_line_menu_ledger.xml
@@ -25,7 +25,7 @@
        	<menuitem
             action="action_account_moves_all_ledger"
             id="menu_action_account_moves_all_ledger"
-            parent="l10n_fi_account_income_statement.accounting_reports_finnish"
+            parent="l10n_fi_account_menu.accounting_reports_finnish"
             sequence="10"
             groups="account.group_account_user"
         />
@@ -33,7 +33,7 @@
        	<menuitem
             action="action_account_moves_all_journal"
             id="menu_action_account_moves_all_journal"
-            parent="l10n_fi_account_income_statement.accounting_reports_finnish"
+            parent="l10n_fi_account_menu.accounting_reports_finnish"
             sequence="20"
             groups="account.group_account_user"
         />
