--- a/l10n_fi_account_income_statement/views/account_financial_report_menu.xml
+++ b/l10n_fi_account_income_statement/views/account_financial_report_menu.xml
@@ -22,21 +22,17 @@
              <field name="target">new</field>
         </record>
         
-        <menuitem name="Finnish Accounting Reports"
-            parent="account.menu_finance_reports"
-            id="accounting_reports_finnish"
-            groups="account.group_account_user,account.group_account_manager" />
         
         <menuitem name="Internal Income Statement" 
             action="action_account_internal_income_statement"
             id="menu_account_internal_income_statement"
-            parent="accounting_reports_finnish" 
+            parent="l10n_fi_account_menu.accounting_reports_finnish" 
             groups="account.group_account_user,account.group_account_manager" />
             
         <menuitem name="External Income Statement" 
             action="action_account_external_income_statement"
             id="menu_account_external_income_statement"
-            parent="accounting_reports_finnish" 
+            parent="l10n_fi_account_menu.accounting_reports_finnish" 
             groups="account.group_account_user,account.group_account_manager" />
         
     </data>
