Improve account ordering

--- a/l10n_fi_account_ledger/views/account_move_line_tree_ledger.xml
+++ b/l10n_fi_account_ledger/views/account_move_line_tree_ledger.xml
@@ -8,8 +8,9 @@
 			<field name="arch" type="xml">
                 <tree string="General Ledger"
                     colors="red:state == 'draft';black:state == 'valid'" 
-                    default_order="account_order, date desc, id desc">
+                    default_order="account_code, date desc, id desc">
                     <field name="account_order" invisible='1'/>
+                    <field name="account_code" invisible='1'/>
                     
                     <field name="account_id" />
                     <field name="date"/>
