--- a/view/res_partner.xml
+++ b/view/res_partner.xml
@@ -5,13 +5,34 @@
             <field name="name">res.partner.form.business.industry</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form" />
+            <field name="priority" eval="15" />
             <field name="arch" type="xml">
 
-                <field name="email" position="after">
-	                <field name="business_industry_class" options='{"no_create": True, "no_open": True}'/>
-	                <field name="business_industry_category" options='{"no_create": True, "no_open": True}' invisible="1" required="0" on_change="onchange_industry_category(business_industry_category, context)"/>
-	                <field name="business_industry_industry" options='{"no_create": True, "no_open": True}' required="0" on_change="onchange_industry_industry(business_industry_industry, context)"/>
-                </field>
+                <page name="internal_notes" position="inside">
+                    <group string="Industry" cols="4">
+                        <div name="industry_class">
+                            <group>
+                                <field name="business_industry_class"
+                                       options='{"no_create": True, "no_open": True}'/>
+
+                                <field name="business_industry_category"
+                                       options='{"no_create": True, "no_open": True}'
+                                       invisible="1"
+                                       required="0"
+                                       on_change="onchange_industry_category(business_industry_category, context)"/>
+                            </group>
+                        </div>
+
+                        <div name="industry_industry">
+                            <group>
+                                <field name="business_industry_industry"
+                                       options='{"no_create": True, "no_open": True}'
+                                       required="0"
+                                       on_change="onchange_industry_industry(business_industry_industry, context)"/>
+                            </group>
+                        </div>
+                    </group>
+                </page>
 
             </field>
         </record>
