--- a/l10n_fi_account_income_statement/views/account_financial_report_view.xml
+++ b/l10n_fi_account_income_statement/views/account_financial_report_view.xml
@@ -36,6 +36,10 @@
                 <field name='account_report_id' position='attributes'> 
                     <attribute name='domain'>[('code','in',('STU','UTU','TASE'))]</attribute>
                 </field>
+
+                <field name="target_move" position="before">
+                    <field name="analytic_account" />
+                </field>
             </field>
         </record>
 
