--- a/l10n_fi_account_income_statement/views/account_financial_report_view.xml
+++ b/l10n_fi_account_income_statement/views/account_financial_report_view.xml
@@ -37,9 +37,11 @@
                     <attribute name='domain'>[('code','in',('STU','UTU','TASE'))]</attribute>
                 </field>
 
-                <field name="target_move" position="before">
-                    <field name="analytic_account" />
-                </field>
+                <xpath expr="//page[@string='Filters']" position="inside">
+                    <group string="Analytic account" attrs="{'invisible':[('filter', '!=', 'filter_analytic')]}">
+                        <field name="analytic_account" options='{"no_open": True, "no_create": True}' />
+                    </group>
+                </xpath>
             </field>
         </record>
 
