--- a/l10n_fi_account_income_statement/views/account_financial_report_view.xml
+++ b/l10n_fi_account_income_statement/views/account_financial_report_view.xml
@@ -38,7 +38,7 @@
                 </field>
 
                 <xpath expr="//page[@string='Filters']" position="inside">
-                    <group string="Analytic account" attrs="{'invisible':[('filter', '!=', 'filter_analytic')]}">
+                    <group attrs="{'invisible':[('filter', '!=', 'filter_analytic')]}">
                         <field name="analytic_account"
                                options='{"no_open": True, "no_create": True}'
                                attrs="{'required':[('filter', '=', 'filter_analytic')]}" />
