Improve analytic account filtering to allow using both date range (or period) and analytic account

--- a/l10n_fi_account_income_statement/views/account_financial_report_view.xml
+++ b/l10n_fi_account_income_statement/views/account_financial_report_view.xml
@@ -37,16 +37,9 @@
                     <attribute name='domain'>[('code','in',('STU','UTU','TASE'))]</attribute>
                 </field>
 
-                <xpath expr="//page[@string='Filters']" position="inside">
-                    <group attrs="{'invisible':[('filter', '!=', 'filter_analytic')]}">
-                        <field name="analytic_account"
-                               options='{"no_open": True, "no_create": True}'
-                               attrs="{'required':[('filter', '=', 'filter_analytic')]}" />
-                    </group>
-                </xpath>
-
-                <field name="filter" position="attributes">
-                    <attribute name="on_change">1</attribute>
+                <field name="filter" position="after">
+                    <field name="analytic_account"
+                           options='{"no_open": True, "no_create": True}' />
                 </field>
 
             </field>
