--- a/l10n_fi_account_income_statement/views/account_financial_report_template.xml
+++ b/l10n_fi_account_income_statement/views/account_financial_report_template.xml
@@ -4,8 +4,8 @@
         <template id="report_financial" inherit_id="account.report_financial">
             <xpath expr="//span[contains(@t-if,'filter_no')]" position="after">
 
-                <span t-if="data['form']['filter'] == 'filter_analytic'"><strong>Analytic account</strong></span>
-                <p t-if="data['form']['filter'] == 'filter_analytic'">
+                <p t-if="data['form']['analytic_account']">
+                    Analytic account:<br />
                     <span t-esc="o.get_analytic_account(data)"/>
                 </p>
             </xpath>
